# rust-gql-boilerplate

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  dev.sh  watch.sh
migrations/2023-11-05-223258_thermostat/: down.sql  up.sql
src/: config.rs  db.rs  lib.rs  main.rs  schema.rs  schema_graphql.rs
src/graphql/: mod.rs  schema.rs  thermostat.rs
src/handlers/: graphql.rs
src/models/: errors.rs  key.rs  mod.rs  thermostat_status.rs
src/resolvers/: mod.rs  thermostat.rs
